# FastORM

./: .gitignore  CHANGELOG.md  INSTALL_DEMO.md  LICENSE  QUICK_INTEGRATION_GUIDE.md  README.md  RELEASE_CHECKLIST_v0.1.0.md  RELEASE_NOTES_v0.1.0.md  RELEASE_SUMMARY_v0.1.0.md  ROADMAP.md  STAGE_12_CACHE_INTEGRATION_SUMMARY.md  STAGE_6_PYDANTIC_V2_INTEGRATION_SUMMARY.md  STAGE_7_PAGINATION_AND_QUERIES_SUMMARY.md  STAGE_8_TESTING_AND_FACTORIES_SUMMARY.md  STAGE_9_PERFORMANCE_MONITORING_SUMMARY.md  bug_fixes_test.db  create_demo_project.py  cursor_.md  dashboard_demo_export.json  debug_soft_delete.py  enhanced_demo.db  events_demo.db  fastorm_production_config.py  install_guide.py  performance_detailed.txt  performance_report.json  performance_summary.json  production_readiness_check.py  pyproject.toml  test.db  test_fastorm_basic.py  test_fastorm_comprehensive.py
.cursor/rules/: fastorm-rules.mdc
.github/workflows/: ci.yml  publish.yml
docs/: README.md
docs/guides/: INSTALL_DEMO.md  PYPI_OIDC_DEPLOYMENT_GUIDE.md  SQLAlchemy_2_Integration_Summary.md  STAGE_10_CLI_TOOLS_SUMMARY.md  STAGE_11_EXISTING_PROJECT_INTEGRATION_SUMMARY.md  STAGE_12_READ_WRITE_SPLIT_INTEGRATION_SUMMARY.md  fastapi_integration.md  performance_monitoring_complete_guide.md  soft_delete_results.md
docs/stages/: PERFORMANCE_MONITORING_SUMMARY.md  SOFT_DELETE_FIX_SUMMARY.md  STAGE_13_MULTIDATABASE_READWRITE_SUMMARY.md  STAGE_14_CORE_ENHANCEMENT_SUMMARY.md  STAGE_14_DEPTH_ENHANCENENT.md  STAGE_5_FIXES_SUMMARY.md
examples/: README.md  cache_integration_demo.py  complete_performance_monitoring_demo.py  config_timestamps_demo.py  database_constructor_demo.py  enhanced_demo.py  events_demo.py  existing_project_integration_demo.py  pydantic_v2_demo.py  quickstart.py  simple_config_demo.py  simple_stage_7_test.py  simple_stage_8_test.py  soft_delete_standalone.py  sqlalchemy_2_modern_demo.py  stage14_example.py  stage9_batch_architecture_demo.py  stage9_performance_monitoring_complete.py  stage_10_cli_demo.py  stage_7_demo.py  stage_8_demo.py  stage_9_performance_demo.py  timestamps_demo.py
fastorm/: __init__.py  config.py  py.typed
fastorm/api/: crud.py
fastorm/cache/: __init__.py  backends.py  decorators.py  manager.py
fastorm/cli/: __init__.py  __main__.py
fastorm/cli/commands/: __init__.py  convert_command.py  database_command.py  init_command.py  migrate_command.py  model_command.py  serve_command.py  setup_command.py
fastorm/connection/: __init__.py  adapters.py  database.py  health_checker.py  session.py
fastorm/core/: __init__.py  fastorm.py  session_manager.py
fastorm/mixins/: __init__.py  attributes.py  events.py  fillable.py  pydantic_integration.py  queries.py  relations.py  scopes.py  soft_delete.py  timestamps.py
fastorm/model/: __init__.py  base.py  cacheable.py  enhanced.py  model.py
fastorm/performance/: __init__.py  dashboard.py  detector.py  metrics.py  monitor.py  profiler.py  reporter.py
fastorm/query/: __init__.py  batch.py  builder.py  cache.py  enhanced.py  pagination.py  soft_delete.py
fastorm/query/batch/: __init__.py  decorators.py  engine.py  exceptions.py  operations.py
fastorm/relations/: __init__.py  base.py  belongs_to.py  belongs_to_many.py  has_many.py  has_one.py  loader.py  mixins.py
fastorm/security/: sql_injection_checker.py
fastorm/serialization/: __init__.py  decorators.py  engine.py  exceptions.py  fields.py  formatters.py  serializers.py
fastorm/testing/: __init__.py  factory.py  faker_providers.py  seeder.py  testcase.py
fastorm/validation/: __init__.py  decorators.py  engine.py  exceptions.py  field_validators.py  model_validators.py  rules.py
scripts/: security_scan.py
tests/: README.md  conftest.py  test_belongs_to_many.py  test_belongs_to_many_fixed.py  test_cache.py  test_cache_integration.py  test_chain_queries.py  test_config_system.py  test_fastorm_core.py  test_full_integration.py  test_has_many_advanced.py  test_integrated_read_write_split.py  test_model_cacheable.py  test_performance.py  test_relations_advanced.py  test_relations_simple.py  test_scopes.py  test_serialization.py  test_soft_delete.py  test_timestamps.py  test_validation_simple.py
tests/database/: bug_fixes_test.db  modern_demo.db  relations_test.db  simple_state_test.db  soft_delete_standalone.db  test_soft_delete.db
tests/examples/: bug_fixes_test.py  relations_test.py
